--- a/package.json
+++ b/package.json
@@ -110,5 +110,10 @@
     "tailwindcss": "^4.0.15",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
-  }
+  },
+  "trustedDependencies": [
+    "@vercel/speed-insights",
+    "esbuild",
+    "sharp"
+  ]
 }
