--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "db:generate": "bunx drizzle-kit generate",
     "db:migrate": "bunx drizzle-kit migrate",
     "db:studio": "bunx drizzle-kit studio",
+    "db:push": "bunx drizzle-kit push",
     "seed:user": "bun tsx scripts/seed-user.ts"
   },
   "dependencies": {
