feat: add database management scripts and user seeding
- Added Drizzle Kit commands for database push and studio interface
- Created seed script to initialize admin user via Better Auth API
- Renamed package from photography-next-gen to photography-website

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "photography-next-gen",
+  "name": "photography-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "db:push": "bunx drizzle-kit push",
+    "db:studio": "bunx drizzle-kit studio",
+    "seed:user": "bun tsx seed-user.ts",
     "lint": "eslint"
   },
   "dependencies": {
