feat: add database scripts for photo URL cleanup with backup and rollback
- Created safe cleanup script with automatic backup, preview, and user confirmation before execution
- Added rollback script to restore original URLs from backup file
- Reorganized seed scripts into dedicated scripts/ directory with comprehensive documentation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "db:push": "bunx drizzle-kit push",
     "db:studio": "bunx drizzle-kit studio",
-    "seed:user": "bun tsx seed-user.ts",
+    "seed:user": "bun tsx scripts/seed-user.ts",
+    "clean:photo-urls": "bun tsx scripts/clean-photo-urls-safe.ts",
+    "rollback:photo-urls": "bun tsx scripts/rollback-photo-urls.ts",
     "lint": "eslint"
   },
   "dependencies": {
