--- a/.env.example
+++ b/.env.example
@@ -8,14 +8,13 @@ BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
 # Next.js
 NEXT_PUBLIC_APP_URL='http://localhost:3000'
 
-# Cloudflare R2
-CLOUDFLARE_R2_ENDPOINT=
-CLOUDFLARE_R2_BUCKET_NAME=
-CLOUDFLARE_R2_PUBLIC_URL=
-CLOUDFLARE_R2_ACCESS_KEY_ID=
-CLOUDFLARE_R2_SECRET_ACCESS_KEY=
-# Cloudflare R2 public URL for images
-NEXT_PUBLIC_CLOUDFLARE_R2_PUBLIC_URL=
+# S3 
+S3_ENDPOINT=
+S3_BUCKET_NAME=
+S3_PUBLIC_URL=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+NEXT_PUBLIC_S3_PUBLIC_URL=
 
 # Mapbox access token
 NEXT_PUBLIC_MAPBOX_ACCESS_TOKEN=
