--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@trpc/tanstack-react-query": "^11.6.0",
     "@types/mapbox-gl": "^3.4.1",
     "@types/mapbox__mapbox-gl-geocoder": "^5.1.0",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "better-auth": "^1.3.31",
     "blurhash": "^2.0.5",
     "class-variance-authority": "^0.7.1",
