--- a/package.json
+++ b/package.json
@@ -49,11 +49,14 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/core": "^3.10.7",
+    "@tiptap/extension-bubble-menu": "^3.11.0",
     "@tiptap/extension-color": "^3.10.7",
+    "@tiptap/extension-floating-menu": "^3.11.0",
     "@tiptap/extension-highlight": "^3.10.7",
     "@tiptap/extension-image": "^3.10.7",
     "@tiptap/extension-text-align": "^3.10.7",
     "@tiptap/extension-text-style": "^3.10.7",
+    "@tiptap/extension-youtube": "^3.11.0",
     "@tiptap/pm": "^3.10.7",
     "@tiptap/react": "^3.10.7",
     "@tiptap/starter-kit": "^3.10.7",
