--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "db:push": "bunx drizzle-kit push",
+    "db:push": "bunx drizzle-kit push --config drizzle.config.ts",
     "db:studio": "bunx drizzle-kit studio",
     "seed:user": "bun tsx scripts/seed-user.ts",
     "clean:photo-urls": "bun tsx scripts/clean-photo-urls-safe.ts",
@@ -86,6 +86,7 @@
     "next": "16.0.0",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
+    "pg": "^8.13.1",
     "react": "19.2.0",
     "react-blurhash": "^0.3.0",
     "react-day-picker": "^9.11.1",
@@ -111,6 +112,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
