--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "supercluster": "^8.0.1",
     "superjson": "^2.2.3",
