--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "lucide-react": "^0.548.0",
     "mapbox-gl": "^3.16.0",
     "motion": "^12.23.24",
-    "next": "16.0.0",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
     "nuqs": "^2.7.2",
     "pg": "^8.13.1",
